--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/noworriesimhere/wedding-site#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.8"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
