--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
   },
   "homepage": "https://github.com/noworriesimhere/wedding-site#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
-    "mongoose": "^5.11.8"
+    "express-session": "^1.17.1",
+    "mongoose": "^5.11.8",
+    "node-sass": "^4.14.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
